--- a/lawnchair/res/values/config.xml
+++ b/lawnchair/res/values/config.xml
@@ -32,7 +32,7 @@
     <!-- Wether smartspace (at a glance) should be enabled per default -->
     <bool name="config_enable_smartspace">true</bool>
     <!-- Which search provider to use per default -->
-    <string name="config_default_search_provider" translatable="false">ch.deletescape.lawnchair.globalsearch.providers.web.BaiduWebSearchProvider</string>
+    <string name="config_default_search_provider" translatable="false">ch.deletescape.lawnchair.globalsearch.providers.web.GoogleWebSearchProvider</string>
     <string name="config_external_search_provider" translatable="false">ch.deletescape.lawnchair.globalsearch.providers.GoogleSearchProvider</string>
     <!-- Which color resolver to use per default; Possible values:
     ch.deletescape.lawnchair.colors.SystemAccentResolver
